[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/icons/Remove.svg" type="Texture" id=1]
[ext_resource path="res://scenes/ui_components/notes_item/NoteItem.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/icon_down.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/icon_increase.svg" type="Texture" id=4]
[ext_resource path="res://scenes/ui_components/model_transform/ModelTransform.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/themes/dark_base.tres" type="Theme" id=6]

[sub_resource type="Theme" id=2]
CheckButton/icons/off = ExtResource( 4 )
CheckButton/icons/on = ExtResource( 3 )

[node name="NoteItem" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1294.0
margin_bottom = 596.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1288.0
margin_bottom = 24.0

[node name="Fold" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 27.0
margin_bottom = 24.0
hint_tooltip = "Show / hide model properties"
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="Note_Name" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 31.0
margin_right = 1256.0
margin_bottom = 24.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 7
text = "PLACEHOLDER NOTE NAME"

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1260.0
margin_right = 1288.0
margin_bottom = 24.0
hint_tooltip = "Remove model"
size_flags_vertical = 3
icon = ExtResource( 1 )
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1288.0
margin_bottom = 592.0
size_flags_vertical = 3

[node name="Note_Text" type="TextEdit" parent="VBoxContainer/VBoxContainer"]
margin_right = 1288.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Note_Transform" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 270.0
margin_right = 1288.0
margin_bottom = 536.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 1288.0
margin_bottom = 564.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 1260.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Interactable"

[node name="interactable_switch" type="CheckBox" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 1264.0
margin_right = 1288.0
margin_bottom = 24.0
pressed = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Fold" to="." method="fold_item"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/Note_Name" to="." method="set_note_name"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="delete_note"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/Note_Text" to="." method="set_note_text"]
[connection signal="model_position_changed" from="VBoxContainer/VBoxContainer/Note_Transform" to="." method="set_note_position"]
[connection signal="model_rotation_changed" from="VBoxContainer/VBoxContainer/Note_Transform" to="." method="set_note_rotation"]
[connection signal="model_scale_changed" from="VBoxContainer/VBoxContainer/Note_Transform" to="." method="set_note_scale"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/HBoxContainer/interactable_switch" to="." method="set_note_interactable"]
